--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,15 @@ captures/
 .idea/gradle.xml
 .idea/dictionaries
 .idea/libraries
+.idea/compiler.xml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/runConfigurations.xml
+.idea/vcs.xml
+.idea/copyright/profiles_settings.xml
+
+gradle/wrapper/gradle-wrapper.jar
 
 # Keystore files
 *.jks
