--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 
     implementation "com.android.support:support-v4:$support_version"
     compile "com.android.support:appcompat-v7:$support_version"
+    compile "com.android.support:mediarouter-v7:$support_version"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.android.exoplayer:exoplayer:2.7.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
